fix(web): tenant name alignment issue

--- a/src/webui/src/components/shell/flyouts/profile/profile.scss
+++ b/src/webui/src/components/shell/flyouts/profile/profile.scss
@@ -41,6 +41,11 @@
   color: darkgray;
 }
 
+a > p, .pcs-renderer-cell > p {
+  word-break: break-all;
+  padding-right: 2px;
+}
+
 .pcs-renderer-cell {
   height: auto;
   @include themify($themes) {
@@ -49,6 +54,7 @@
   .pcs-renderer-icon {
     margin-bottom: 4px !important;
     margin-left: 3px !important;
+    display: inline-block !important;
   }
   .current-tenant-text {
     font-weight: 600;
